--- a/src/app/section-education/section-education.component.html
+++ b/src/app/section-education/section-education.component.html
@@ -5,19 +5,22 @@
     <div class="row">
         <div class="col-md-8">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Eg. B.Tech from JNTU University.">
+            <input type="text"
+                   class="form-control" 
+                   placeholder="Eg. B.Tech from JNTU University."
+                   #eduItem>
           </div>&nbsp;
         </div>
         <div class="col-md-4">
-          <button type="submit" class="btn btn-default">Add</button>
+          <button type="submit" class="btn btn-default" (click)="onAddEducation(eduItem.value)">Add</button>
         </div>
     </div>
       <br>
 
     <ul class="fa-ul mb-0">
-      <li>
+      <li *ngFor="let item of eduItems">
         <i class="fa-li fa fa-check"></i>
-        B.Tech from Avanthi S St.Theressa Institute Of Engineering And Technology (Affiliated to JNTU University).
+        {{ item }}
       </li>
     </ul>
   </div>
