--- a/src/app/section-experience/section-experience.component.html
+++ b/src/app/section-experience/section-experience.component.html
@@ -5,18 +5,22 @@
       <div class="row">
         <div class="col-md-8">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Eg. Currently working as Software Engineer for Nisum Consulting Pvt. Ltd, Hyderabad">
+            <input type="text"
+                   class="form-control"
+                   placeholder="Eg. Currently working as Software Engineer for Nisum Consulting Pvt. Ltd, Hyderabad"
+                   #expItem
+                   >
           </div>&nbsp;
         </div>
         <div class="col-md-4">
-          <button type="submit" class="btn btn-default">Add</button>
+          <button type="submit" class="btn btn-default" (click)="onAddExperience(expItem.value)">Add</button>
         </div>
       </div>
       <br>
       <ul class="fa-ul mb-0">
-        <li>
+        <li *ngFor="let item of expItems">
           <i class="fa-li fa fa-check"></i>
-          Currently working as Software Engineer for Nisum Consulting Pvt. Ltd, Hyderabad.
+          {{item}}
         </li>
       </ul>
     </div>
