--- a/src/app/section-education/section-education.component.html
+++ b/src/app/section-education/section-education.component.html
@@ -6,25 +6,25 @@
         <div class="col-md-8">
           <div class="form-group">
             <input type="text"
-                   class="form-control" 
+                   class="form-control"
                    placeholder="Eg. B.Tech from JNTU University."
-                   #eduItem>
+                   [(ngModel)]="item">
           </div>&nbsp;
         </div>
         <div class="col-md-4">
-          <button type="submit" class="btn btn-default" (click)="onAddEducation(eduItem.value)">Add</button>
+          <button type="submit" class="btn btn-default" (click)="onAdd()">Add</button>
         </div>
     </div>
       <br>
 
     <ul class="fa-ul mb-0">
-      <li *ngFor="let item of eduItems">
+      <li *ngFor="let item of items">
         <i class="fa-li fa fa-check"></i>
         {{ item }}
       </li>
     </ul>
   </div>
-  <div class="row">
+  <!-- <div class="row">
       <div class="col-md-3">
           <button type="button" class="btn btn-primary btn-lg outline">Preview Resume <span class="fa fa-file-text-o"></span></button>
       </div>
@@ -34,5 +34,5 @@
       <div class="col-md-3">
           <button type="button" class="btn btn-primary btn-lg outline" disabled>Print Resume <span class="fa fa-print"></span></button>
       </div>
-  </div>
+  </div> -->
 </section>
