--- a/src/app/section-experience/section-experience.component.html
+++ b/src/app/section-experience/section-experience.component.html
@@ -1,26 +1,25 @@
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
     <div class="my-auto">
       <h2 class="mb-5">Experience</h2>
-  
+
       <div class="row">
         <div class="col-md-8">
           <div class="form-group">
             <input type="text"
                    class="form-control"
                    placeholder="Eg. Currently working as Software Engineer for Nisum Consulting Pvt. Ltd, Hyderabad"
-                   #expItem
-                   >
+                   [(ngModel)] = "item">
           </div>&nbsp;
         </div>
         <div class="col-md-4">
-          <button type="submit" class="btn btn-default" (click)="onAddExperience(expItem.value)">Add</button>
+          <button type="submit" class="btn btn-primary" (click)="onAdd()">Add</button>
         </div>
       </div>
       <br>
       <ul class="fa-ul mb-0">
-        <li *ngFor="let item of expItems">
+        <li *ngFor="let item of items">
           <i class="fa-li fa fa-check"></i>
-          {{item}}
+          {{ item }}
         </li>
       </ul>
     </div>
