--- a/src/app/section-professional-experience/section-professional-experience.component.html
+++ b/src/app/section-professional-experience/section-professional-experience.component.html
@@ -6,6 +6,7 @@
       <div class="resume-content mr-auto">
         <h3 class="mb-0">Nisum Recruitment Portal</h3>
         <div class="subheading mb-3">Sofware Developer</div>
+        <div class="subheading mb-3">March 2013 - Present</div>
         <div class="subheading-company mb-3">Nisum Consulting Pvt Ltd.</div>
 
        <div class="row">
@@ -38,7 +39,7 @@
                 </div>&nbsp;
               </div>
               <div class="col-md-4">
-                <button type="submit" class="btn btn-default">Add</button>
+                <button type="submit" class="btn btn-primary">Add</button>
               </div>
           </div>
 
@@ -55,70 +56,6 @@
               Involved in writing test cases with Junit framework.</li>
           </ul>
         </div>
-      </div>
-
-      <div class="resume-date text-md-right">
-        <span class="text-primary">March 2013 - Present</span>
-      </div>
-    </div>
-
-    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-      <div class="resume-content mr-auto">
-        <h3 class="mb-0">Nisum Recruitment Portal</h3>
-        <div class="subheading mb-3">Sofware Developer</div>
-        <div class="subheading-company mb-3">Nisum Consulting Pvt Ltd.</div>
-
-       <div class="row">
-         <div class="col-md-3">
-          <div class="subheading mb-3">Technologies:</div>
-         </div>
-         <div class="col-md-9">
-          <tag-input></tag-input>
-         </div>
-       </div>
-
-       <div class="row">
-        <div class="col-md-3">
-         <div class="subheading mb-3">Tools:</div>
-        </div>
-        <div class="col-md-9">
-         <tag-input></tag-input>
-        </div>
-      </div>
-      <br>
-
-        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-        <br>
-        <div class="my-auto">
-          <div class="subheading mb-3">Responsibilities:</div>
-          <div class="row">
-              <div class="col-md-8">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Eg. Involved in Bug fixing.">
-                </div>&nbsp;
-              </div>
-              <div class="col-md-4">
-                <button type="submit" class="btn btn-default">Add</button>
-              </div>
-          </div>
-
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Involved in development of the Spring Controller.
-              </li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Involved in Bug fixing.</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Involved in writing test cases with Junit framework.</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="resume-date text-md-right">
-        <span class="text-primary">March 2013 - Present</span>
       </div>
     </div>
   </div>
