--- a/src/app/section-profile/section-profile.component.html
+++ b/src/app/section-profile/section-profile.component.html
@@ -13,21 +13,30 @@
          type="text"
          class="form-control"
          placeholder="FirstName"
-         [(ngModel)]="firstName">
+         [(ngModel)]="firstName"
+         [disabled]="!isEditable">
       </div>&nbsp;
+
       <div class="form-group">
         <input type="text"
           class="form-control"
           placeholder="LastName"
-          [(ngModel)]="lastName">
+          [(ngModel)]="lastName"
+          [disabled]="!isEditable">
       </div>&nbsp;
+
       <div class="form-group">
         <input
          type="email"
          class="form-control"
-         [(ngModel)]="email">
+         [(ngModel)]="email"
+         [disabled]="!isEditable">
       </div>&nbsp;
-      <button type="submit" class="btn btn-default" (click)="onProfileAdd()">Add</button>
+
+      <div>
+        <button type="submit" class="btn btn-primary" (click)="onProfileAdd()" [disabled]="!isEditable">Add</button>
+        <button type="submit" class="btn btn-primary" (click)="onProfileEdit()" [disabled]="isEditable">Edit</button>
+      </div>
     </div>
 
   </div>
