--- a/src/app/section-profile/section-profile.component.html
+++ b/src/app/section-profile/section-profile.component.html
@@ -34,10 +34,9 @@
       </div>&nbsp;
 
       <div>
-        <button type="submit" class="btn btn-primary" (click)="onProfileAdd()" [disabled]="!isEditable">Add</button>
-        <button type="submit" class="btn btn-primary" (click)="onProfileEdit()" [disabled]="isEditable">Edit</button>
+        <button type="submit" class="btn btn-primary" (click)="onAdd()" [disabled]="!isEditable">Add</button>
+        <button type="submit" class="btn btn-primary" (click)="onEdit()" [disabled]="isEditable">Edit</button>
       </div>
     </div>
-
   </div>
 </section>
