--- a/src/app/section-education/section-education.component.html
+++ b/src/app/section-education/section-education.component.html
@@ -12,7 +12,7 @@
           </div>&nbsp;
         </div>
         <div class="col-md-4">
-          <button type="submit" class="btn btn-default" (click)="onAdd()">Add</button>
+          <button type="button" class="btn btn-primary" (click)="onAdd()">Add</button>
         </div>
     </div>
       <br>
